[project]
name = "tv-proxy"
version = "0.1.0"
description = "A Flask-based TV proxy application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.5.1",
    "gevent>=25.4.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "python-socketio>=5.13.0",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
]
