[project]
name = "tv-proxy"
version = "0.1.0"
description = "A FastAPI-based TV proxy application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio>=5.13.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
